added submit command
